# rust_based_fast_api

./: .gitignore  API_REFERENCE.md  Cargo.toml  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md  PATTERNS_AND_TROUBLESHOOTING.md  README.md  TLS_SETUP_GUIDE.md  WORK_COMPLETION_SUMMARY.md
.claude/: CURRENT_STATUS.md  ERGONOMIC_IMPROVEMENTS_PLAN.md  LOGIN_HANDLER_SIMPLIFICATION.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE1_QUICK_REFERENCE.md  PHASE1_USAGE_GUIDE.md  PHASE2B_IMPLEMENTATION_COMPLETE.md  PHASE2B_QUICK_REFERENCE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE2_PLAN.md  PHASE2_QUICK_REFERENCE.md  PHASES_OVERVIEW.md  instructions.md
.claude/agents/: doc-guardian.md  feature-tester.md
examples/: README.md
examples/basic-auth/: Cargo.toml
examples/basic-auth/src/: main.rs
examples/login-endpoint/: Cargo.toml  api-example.db
examples/login-endpoint/src/: main.rs
examples/poem_example/: Cargo.toml  TESTING.md  auth.toml  poem_example.db  test_endpoints.py
examples/poem_example/src/: main.rs
examples/rbac/: Cargo.toml
examples/rbac/src/: main.rs
poem_auth_macros/: Cargo.toml
poem_auth_macros/src/: lib.rs
src/: auth.rs  config.rs  db.rs  error.rs  jwt.rs  lib.rs  middleware.rs  password.rs  quick_start.rs
src/api/: mod.rs  types.rs
src/auth/: claims.rs  provider.rs
src/db/: models.rs  sqlite.rs
src/jwt/: cache.rs
src/middleware/: jwt_auth.rs  master_auth.rs  rate_limit.rs
src/poem_integration/: app_state.rs  extractors.rs  guards.rs  login_helper.rs  mod.rs
src/providers/: ldap.rs  local.rs  mod.rs
test/: TEST_COVERAGE_GUIDE.md  TEST_DEPENDENCIES.md
